--- a/Matt.Mih.Helper/Matt.Mih.Helper.csproj
+++ b/Matt.Mih.Helper/Matt.Mih.Helper.csproj
@@ -51,7 +51,8 @@
   <ItemGroup>
     <Compile Include="BalancingStrategy.cs" />
     <Compile Include="Champion.cs" />
-    <Compile Include="ChampionJson.cs" />
+    <Compile Include="ChampionDTO.cs" />
+    <Compile Include="LeagueApiDAO.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +61,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Summoner.cs" />
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
