--- a/Matt.Mih.Helper/Matt.Mih.Helper.csproj
+++ b/Matt.Mih.Helper/Matt.Mih.Helper.csproj
@@ -51,7 +51,7 @@
   <ItemGroup>
     <Compile Include="App.cs" />
     <Compile Include="BalanceResult.cs" />
-    <Compile Include="BalancingStrategy.cs" />
+    <Compile Include="BruteForceBalancingStrategy.cs" />
     <Compile Include="Champion.cs" />
     <Compile Include="ChampionDTO.cs" />
     <Compile Include="IBalancingStrategy.cs" />
