Added dependency injection to the LeagueApiDAO in the helper class

--- a/Matt.Mih.Helper/Matt.Mih.Helper.csproj
+++ b/Matt.Mih.Helper/Matt.Mih.Helper.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Champion.cs" />
     <Compile Include="ChampionDTO.cs" />
     <Compile Include="IBalancingStrategy.cs" />
+    <Compile Include="ILeagueDAO.cs" />
     <Compile Include="LeagueApiDAO.cs" />
     <Compile Include="LeagueEntryDTO.cs" />
     <Compile Include="LeagueInfoDTO.cs" />
