--- a/Matt.Mih.Helper/Matt.Mih.Helper.csproj
+++ b/Matt.Mih.Helper/Matt.Mih.Helper.csproj
@@ -37,7 +37,7 @@
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.5\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -55,13 +55,7 @@
     <Compile Include="Helper.cs" />
     <Compile Include="BalanceResult.cs" />
     <Compile Include="BruteForceBalancingStrategy.cs" />
-    <Compile Include="Champion.cs" />
-    <Compile Include="ChampionDTO.cs" />
     <Compile Include="IBalancingStrategy.cs" />
-    <Compile Include="ILeagueDAO.cs" />
-    <Compile Include="LeagueApiDAO.cs" />
-    <Compile Include="LeagueEntryDTO.cs" />
-    <Compile Include="LeagueInfoDTO.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,9 +71,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rune.cs" />
-    <Compile Include="Runepage.cs" />
-    <Compile Include="RunepageDTO.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="SettingsForm.cs">
       <SubType>Form</SubType>
@@ -88,8 +79,6 @@
       <DependentUpon>SettingsForm.cs</DependentUpon>
     </Compile>
     <Compile Include="SettingsHandler.cs" />
-    <Compile Include="Summoner.cs" />
-    <Compile Include="SummonerDTO.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -125,6 +114,12 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Matt.Mih.Helper.LeagueApi\Matt.Mih.Helper.LeagueApi.csproj">
+      <Project>{98f32981-82c6-4dce-93aa-50d5dbf2bb6d}</Project>
+      <Name>Matt.Mih.Helper.LeagueApi</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
