--- a/Matt.Mih.Helper.LeagueApi/Matt.Mih.Helper.LeagueApi.csproj
+++ b/Matt.Mih.Helper.LeagueApi/Matt.Mih.Helper.LeagueApi.csproj
@@ -45,10 +45,11 @@
   <ItemGroup>
     <Compile Include="Champion.cs" />
     <Compile Include="ChampionDTO.cs" />
-    <Compile Include="ILeagueDAO.cs" />
+    <Compile Include="ILeagueRepository.cs" />
     <Compile Include="LeagueApiDAO.cs" />
     <Compile Include="LeagueEntryDTO.cs" />
     <Compile Include="LeagueInfoDTO.cs" />
+    <Compile Include="LeagueRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rune.cs" />
     <Compile Include="RuneDTO.cs" />
