--- a/Matt.Mih.Helper/Matt.Mih.Helper.csproj
+++ b/Matt.Mih.Helper/Matt.Mih.Helper.csproj
@@ -56,6 +56,7 @@
     <Compile Include="BalanceResult.cs" />
     <Compile Include="BruteForceBalancingStrategy.cs" />
     <Compile Include="IBalancingStrategy.cs" />
+    <Compile Include="IMainFormView.cs" />
     <Compile Include="IPlayerView.cs" />
     <Compile Include="ISettingsFormView.cs" />
     <Compile Include="MainForm.cs">
@@ -64,6 +65,7 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MainPresenter.cs" />
     <Compile Include="NameManager.cs" />
     <Compile Include="PlayerPresenter.cs" />
     <Compile Include="PlayerView.cs">
