--- a/Matt.Mih.Helper/Matt.Mih.Helper.csproj
+++ b/Matt.Mih.Helper/Matt.Mih.Helper.csproj
@@ -57,6 +57,7 @@
     <Compile Include="BruteForceBalancingStrategy.cs" />
     <Compile Include="IBalancingStrategy.cs" />
     <Compile Include="IMainFormView.cs" />
+    <Compile Include="IMainMenuView.cs" />
     <Compile Include="IPlayerView.cs" />
     <Compile Include="ISettingsFormView.cs" />
     <Compile Include="MainForm.cs">
@@ -65,7 +66,14 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="MainPresenter.cs" />
+    <Compile Include="MainMenuPresenter.cs" />
+    <Compile Include="MainMenuView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="MainMenuView.Designer.cs">
+      <DependentUpon>MainMenuView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MainFormPresenter.cs" />
     <Compile Include="NameManager.cs" />
     <Compile Include="PlayerPresenter.cs" />
     <Compile Include="PlayerView.cs">
@@ -86,9 +94,12 @@
       <DependentUpon>SettingsForm.cs</DependentUpon>
     </Compile>
     <Compile Include="SettingsManager.cs" />
-    <Compile Include="SettingsPresenter.cs" />
+    <Compile Include="SettingsFormPresenter.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainMenuView.resx">
+      <DependentUpon>MainMenuView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PlayerView.resx">
       <DependentUpon>PlayerView.cs</DependentUpon>
