Fixed bug where exceptions were thrown when there was no internet access. Also added interfaces to help test.

--- a/Matt.Mih.Helper.Tests/Matt.Mih.Helper.Tests.csproj
+++ b/Matt.Mih.Helper.Tests/Matt.Mih.Helper.Tests.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="MockLeagueRepository.cs" />
     <Compile Include="TestBalancingStrategy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestSummonerRating.cs" />
