--- a/Matt.Mih.Helper/Matt.Mih.Helper.csproj
+++ b/Matt.Mih.Helper/Matt.Mih.Helper.csproj
@@ -58,8 +58,10 @@
     <Compile Include="IBalancingStrategy.cs" />
     <Compile Include="IMainFormView.cs" />
     <Compile Include="IMainMenuView.cs" />
+    <Compile Include="INameManager.cs" />
     <Compile Include="IPlayerView.cs" />
     <Compile Include="ISettingsFormView.cs" />
+    <Compile Include="ISettingsManager.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
