--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Matt.Mih.Helper.LeagueApi\packages.config" />
+  <repository path="..\Matt.Mih.Helper.WinForms\packages.config" />
   <repository path="..\Matt.Mih.Helper\packages.config" />
 </repositories>
