--- a/Matt.Mih.Helper.LeagueApi/Matt.Mih.Helper.LeagueApi.csproj
+++ b/Matt.Mih.Helper.LeagueApi/Matt.Mih.Helper.LeagueApi.csproj
@@ -43,25 +43,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Champion.cs" />
-    <Compile Include="ChampionDTO.cs" />
+    <Compile Include="Objects\Champion.cs" />
+    <Compile Include="DTOs\ChampionDTO.cs" />
     <Compile Include="ILeagueRepository.cs" />
     <Compile Include="LeagueApiDAO.cs" />
-    <Compile Include="LeagueEntryDTO.cs" />
-    <Compile Include="LeagueInfoDTO.cs" />
+    <Compile Include="DTOs\LeagueEntryDTO.cs" />
+    <Compile Include="DTOs\LeagueInfoDTO.cs" />
     <Compile Include="LeagueRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rune.cs" />
-    <Compile Include="RuneDTO.cs" />
-    <Compile Include="RuneListDTO.cs" />
-    <Compile Include="RuneMetaDTO.cs" />
-    <Compile Include="Runepage.cs" />
-    <Compile Include="RuneSlotDTO.cs" />
-    <Compile Include="RunepageDTO.cs" />
-    <Compile Include="RunepageListDTO.cs" />
-    <Compile Include="RuneStat.cs" />
-    <Compile Include="Summoner.cs" />
-    <Compile Include="SummonerDTO.cs" />
+    <Compile Include="Objects\Rune.cs" />
+    <Compile Include="DTOs\RuneDTO.cs" />
+    <Compile Include="DTOs\RuneListDTO.cs" />
+    <Compile Include="DTOs\RuneMetaDTO.cs" />
+    <Compile Include="Objects\Runepage.cs" />
+    <Compile Include="DTOs\RuneSlotDTO.cs" />
+    <Compile Include="DTOs\RunepageDTO.cs" />
+    <Compile Include="DTOs\RunepageListDTO.cs" />
+    <Compile Include="Objects\RuneStat.cs" />
+    <Compile Include="Objects\Summoner.cs" />
+    <Compile Include="DTOs\SummonerDTO.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
