--- a/Matt.Mih.Helper/Matt.Mih.Helper.csproj
+++ b/Matt.Mih.Helper/Matt.Mih.Helper.csproj
@@ -65,6 +65,7 @@
     <Compile Include="RuneStatCollection.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="SettingsManager.cs" />
+    <Compile Include="WebExceptionManager.cs" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
