--- a/Matt.Mih.Helper.WinForms/packages.config
+++ b/Matt.Mih.Helper.WinForms/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Combinatorics" version="1.0.3.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
 </packages>
