--- a/Seaal.Mih.Helper.Tests/Seaal.Mih.Helper.Tests.csproj
+++ b/Seaal.Mih.Helper.Tests/Seaal.Mih.Helper.Tests.csproj
@@ -56,9 +56,17 @@
     <Compile Include="TestSummonerRating.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Seaal.Mih.Helper.LeagueApi\Seaal.Mih.Helper.LeagueApi.csproj">
+      <Project>{98f32981-82c6-4dce-93aa-50d5dbf2bb6d}</Project>
+      <Name>Seaal.Mih.Helper.LeagueApi</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Seaal.Mih.Helper.WinForms\Seaal.Mih.Helper.WinForms.csproj">
       <Project>{1d96ba43-3f10-4119-8d3e-1cf22217d6dd}</Project>
       <Name>Seaal.Mih.Helper.WinForms</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Seaal.Mih.Helper\Seaal.Mih.Helper.csproj">
+      <Project>{c8e310a3-96a4-4b89-b86b-05ad0eca330a}</Project>
+      <Name>Seaal.Mih.Helper</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
